test-2/objects/New_page__c.object
<CustomObject>
    <fields>
        <fullName>Case_1__c</fullName>
        <label>Case 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_2__c</fullName>
        <label>Case 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_3__c</fullName>
        <label>Case 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>New page</label>
    <nameField>
        <label>New page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>